# Aki-Research-Council

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  pyproject.toml
.cursor/rules/: arc.mdc
config/: models.yaml  ranking.yaml  report.yaml  sources.yaml  topics.yaml
docs/: README.md
docs/collab/: README.md  ci.md  data-model.md  dod.md  runbook.md
docs/collab/adr/: 0000-template.md  0001-initial-stack-and-authority.md  0002-stack-revision.md
docs/collab/eval/: README.md
docs/collab/postmortems/: README.md
docs/collab/sessions/: README.md
docs/product/: 01-prd-summary.md  02-architecture.md  03-tech-spec.md  04-acceptance-criteria.md  05-ui-design.md
prompts/: README.md
prompts/ai_for_math/: .gitkeep
research_state/: .gitkeep  questions.yaml  researcher_profile.yaml
research_state/projects/: ai_for_math.yaml  combinatorics_and_matroids.yaml  structured_and_reliable_vision.yaml
src/arc/: __init__.py  cli.py  config.py  paths.py  pipeline.py  verify.py
src/arc/council/: __init__.py  chair.py  historian.py  liaison.py  schemas.py  skeptic.py  tournament.py
src/arc/evaluation/: __init__.py
src/arc/evidence/: __init__.py  builder.py
templates/daily/: editorial.html.j2  editorial.md.j2  report.html.j2  report.md.j2
templates/monthly/: report.md.j2
templates/styles/: report.css  tokens.css
templates/weekly/: report.md.j2
tests/: test_audit_fixes.py  test_council.py  test_editorial_brief.py  test_evidence.py  test_ingestion.py  test_normalization.py  test_skeleton.py
(+14 files in other folders)
