[project]
name = "aki-research-council"
version = "0.1.0"
description = "ARC — personal research council: evidence-driven daily briefs and decisions"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "AlanAkillove" }]
dependencies = [
  "httpx>=0.28.0",
  "jinja2>=3.1.0",
  "numpy>=2.0.0",
  "openai>=1.60.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.0",
  "typer>=0.15.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.9.0",
]
pdf = [
  "pymupdf>=1.25.0",
]
slides = [
  "python-pptx>=1.0.0",
]

[project.scripts]
arc = "arc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arc"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
